[tool.poetry]
name = "ppde"
version = "0.1.0"
description = "Fast and composable gradient-based MCMC sampling for directed evolution of proteins."
authors = ["Patrick Emami <pemami@nrel.gov>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytorch = "^1.0.2"
biopython = "^1.81"
sklearn = "^0.0.post1"
cma = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
